# ---------------------------------------------------------------------------
# countdown_app - the Qt6 Quick (QML) GUI. All game logic lives in
# countdown::solver; this target is presentation + platform glue only.
# ---------------------------------------------------------------------------
find_package(Qt6 6.5 REQUIRED COMPONENTS Core Quick Gui QuickControls2)

qt_standard_project_setup(REQUIRES 6.5)

# QML files live under qml/components/ and qml/pages/ as well as qml/ itself;
# NEW makes qt_add_qml_module generate a qmldir for each of those extra
# directories so types resolve without hand-written qmldir files.
qt_policy(SET QTP0004 NEW)

# Select the single platform implementation for the target OS. No #ifdefs: CMake
# decides which translation unit is compiled.
if(WIN32)
    set(COUNTDOWN_PLATFORM_SOURCE platform/windows/platform_windows.cpp)
elseif(APPLE)
    set(COUNTDOWN_PLATFORM_SOURCE platform/macos/platform_macos.cpp)
elseif(UNIX)
    set(COUNTDOWN_PLATFORM_SOURCE platform/linux/platform_linux.cpp)
else()
    message(FATAL_ERROR "Unsupported target platform")
endif()

# ---------------------------------------------------------------------------
# countdown_app_core - the Solver QObject facade + platform glue, split out
# as a static library so it can be linked into a Qt Test binary (tests/app)
# without pulling in Quick/Gui/QuickControls2. countdown_app below is then
# just the QML-loading executable shell over this core.
# ---------------------------------------------------------------------------
qt_add_library(countdown_app_core STATIC
    solver.cpp
    solver.hpp
    platform/platform.hpp
    logging/logging.hpp
    logging/logging.cpp
    ${COUNTDOWN_PLATFORM_SOURCE})

target_include_directories(countdown_app_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

target_link_libraries(countdown_app_core
    PUBLIC
        countdown::solver
        Qt6::Core
    PRIVATE
        countdown::warnings
        countdown::sanitizers
        countdown::coverage)

# std::getenv is flagged "unsafe" by the MSVC CRT; the usage is correct and
# portable, so silence that specific deprecation for this target only. This
# also fires under clang-cl (CXX_COMPILER_ID "Clang"), which uses the same
# MSVC CRT headers/annotations on Windows.
target_compile_definitions(countdown_app_core PRIVATE
    "$<$<OR:$<CXX_COMPILER_ID:MSVC>,$<AND:$<PLATFORM_ID:Windows>,$<CXX_COMPILER_ID:Clang>>>:_CRT_SECURE_NO_WARNINGS>")

# The version header is generated by the library's build-time stamp target.
add_dependencies(countdown_app_core countdown_version)

# Bundles the default word list into countdown_app_core (not just the
# countdown_app executable) as a Qt resource, so anything that constructs a
# Solver - the real app, but also tests/app and tests/qml's Qt Test binaries,
# which link countdown_app_core directly and never link countdown_app itself -
# gets a complete dictionary. Consumers must link this target with
# $<LINK_LIBRARY:WHOLE_ARCHIVE,countdown_app_core> (see below): like
# countdown_app_qml, nothing calls into the generated resource-registration
# object file directly, so a plain link would let the archive-member-elision
# linker default drop it and QFile(":/dictionary/words.txt") would silently
# open nothing.
qt_add_resources(countdown_app_core "dictionary"
    PREFIX "/dictionary"
    BASE "resources/dictionary"
    FILES resources/dictionary/words.txt)

# ---------------------------------------------------------------------------
# countdown_app_qml - the "Countdown" QML module (Main shell, Theme/AppState
# singletons, components, pages), as its own static backing library rather
# than embedded directly in countdown_app. This lets tests/qml link the exact
# same compiled module into a separate Qt Quick Test executable without
# duplicating the QML_FILES list against out-of-tree paths.
#
# Two things this needs that a plain STATIC + target_link_libraries doesn't
# give for free:
#   - A SHARED backing library ends up with no direct symbol references from
#     countdown_app (all interaction is runtime QML resource lookup, not C++
#     calls), so the default GCC/Clang `--as-needed` linker behavior drops it
#     from DT_NEEDED entirely - the plugin .so never loads, so its Qt
#     resource-registration static initializers never run, and `import
#     Countdown` fails at runtime with "qmldir file not found".
#   - qt_add_qml_module's "no separate plugin" resource-embedding only
#     applies when the backing target IS the final executable; for a
#     STATIC library consumed by a *dynamically*-linked prebuilt Qt (as used
#     here), qt6_import_qml_plugins() - the usual fix for statically-linked
#     QML modules - is designed for fully static Qt builds and doesn't import
#     it either.
# STATIC + forcing the archive to link in full (see the WHOLE_ARCHIVE wraps
# below) sidesteps both: the module's resource-registration object files are
# always retained regardless of symbol usage, with no runtime plugin-file
# discovery/dlopen path to get wrong.
# ---------------------------------------------------------------------------
qt_add_library(countdown_app_qml STATIC)

# Theme and AppState are QML singletons. This must run before
# qt_add_qml_module below: that call reads QT_QML_SINGLETON_TYPE off each
# QML_FILES entry to decide whether to emit a `singleton` qmldir line, so
# setting it afterwards silently registers both as plain (non-singleton)
# types and every Theme.*/AppState.* binding in the app resolves to
# undefined at runtime.
set_source_files_properties(qml/Theme.qml qml/AppState.qml
    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)

qt_add_qml_module(countdown_app_qml
    URI Countdown
    VERSION 1.0
    QML_FILES
        qml/Main.qml
        qml/Theme.qml
        qml/AppState.qml
        qml/components/Card.qml
        qml/components/SectionLabel.qml
        qml/components/Tile.qml
        qml/components/PadButton.qml
        qml/components/FlatButton.qml
        qml/components/NavItem.qml
        qml/components/SegControl.qml
        qml/pages/NumbersPage.qml
        qml/pages/LettersPage.qml
        qml/pages/ConundrumPage.qml
        qml/pages/SettingsPage.qml)

qt_add_executable(countdown_app main.cpp)

target_link_libraries(countdown_app
    PRIVATE
        $<LINK_LIBRARY:WHOLE_ARCHIVE,countdown_app_core>
        $<LINK_LIBRARY:WHOLE_ARCHIVE,countdown_app_qml>
        countdown::warnings
        countdown::sanitizers
        countdown::coverage
        Qt6::Quick
        Qt6::Gui
        Qt6::QuickControls2)

# The version header is generated by the library's build-time stamp target.
add_dependencies(countdown_app countdown_version)

countdown_deploy_sanitizer_runtime(countdown_app)

set_target_properties(countdown_app PROPERTIES
    WIN32_EXECUTABLE ON
    MACOSX_BUNDLE ON)

# ---------------------------------------------------------------------------
# Deploy Qt's runtime DLLs and QML plugins (Qt6Core/Gui/Qml/Quick, the
# platform plugin, QtQuick.Controls/Layouts, ...) next to the built exe so it
# runs directly from the build tree, matching how it would ship. Without
# this, countdown_app.exe fails to start: the loader can't find the Qt DLLs
# and QML can't resolve QtQuick.Controls/Layouts imports.
# ---------------------------------------------------------------------------
if(WIN32)
    get_filename_component(COUNTDOWN_QT_BIN_DIR "${Qt6_DIR}/../../../bin" ABSOLUTE)
    find_program(COUNTDOWN_WINDEPLOYQT_EXECUTABLE
        NAMES windeployqt6 windeployqt
        HINTS "${COUNTDOWN_QT_BIN_DIR}")

    if(COUNTDOWN_WINDEPLOYQT_EXECUTABLE)
        # countdown_app_tests and countdown_qml_tests (tests/CMakeLists.txt) run
        # their own windeployqt POST_BUILD step against this same
        # CMAKE_RUNTIME_OUTPUT_DIRECTORY and add_dependencies() on this target to
        # serialize behind it - see the comment there for why (concurrent
        # windeployqt processes race on shared destination files).
        add_custom_command(TARGET countdown_app POST_BUILD
            COMMAND "${COUNTDOWN_WINDEPLOYQT_EXECUTABLE}"
                --qmldir "${CMAKE_CURRENT_SOURCE_DIR}/qml"
                --no-translations
                --compiler-runtime
                "$<TARGET_FILE:countdown_app>"
            COMMENT "Deploying Qt runtime dependencies for countdown_app")
    else()
        message(WARNING
            "windeployqt not found next to Qt6 (looked in ${COUNTDOWN_QT_BIN_DIR}); "
            "countdown_app.exe will not run standalone from the build tree.")
    endif()
endif()

# ---------------------------------------------------------------------------
# Install + Qt runtime deployment for packaging. qt_generate_deploy_app_script()
# is Qt's CMake-native replacement for windeployqt/macdeployqt at install
# time: it inspects the built target and emits an install(SCRIPT) that copies
# the Qt libraries/plugins the app actually uses next to it (or into the .app
# bundle on macOS). This is separate from the POST_BUILD windeployqt step
# above, which targets the build tree, not an install/package tree. Linux has
# no supported deploy step here, so NO_UNSUPPORTED_PLATFORM_ERROR turns that
# into a no-op instead of a configure error; Linux packages rely on a system
# Qt6 install (see the DEB dependency in cmake/Packaging.cmake).
# ---------------------------------------------------------------------------
include(GNUInstallDirs)

install(TARGETS countdown_app
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    BUNDLE DESTINATION ".")

qt_generate_deploy_app_script(
    TARGET countdown_app
    OUTPUT_SCRIPT COUNTDOWN_APP_DEPLOY_SCRIPT
    NO_UNSUPPORTED_PLATFORM_ERROR)
install(SCRIPT "${COUNTDOWN_APP_DEPLOY_SCRIPT}")
