# ---------------------------------------------------------------------------
# countdownsolver - the Qt6 Quick (QML) GUI. All game logic lives in
# countdown::solver; this target is presentation + platform glue only.
# ---------------------------------------------------------------------------
find_package(Qt6 6.5 REQUIRED COMPONENTS Core Concurrent Quick Gui QuickControls2 LinguistTools)

qt_standard_project_setup(REQUIRES 6.5)

# QML files live under qml/components/ and qml/pages/ as well as qml/ itself;
# NEW makes qt_add_qml_module generate a qmldir for each of those extra
# directories so types resolve without hand-written qmldir files.
qt_policy(SET QTP0004 NEW)

# Select the single platform implementation for the target OS. No #ifdefs: CMake
# decides which translation unit is compiled. ANDROID/IOS must be checked
# before WIN32/APPLE/UNIX: CMake sets ANDROID alongside UNIX, and IOS alongside
# APPLE, when cross-compiling for those targets.
if(ANDROID)
    set(COUNTDOWN_PLATFORM_SOURCE platform/android/platform_android.cpp)
elseif(IOS)
    set(COUNTDOWN_PLATFORM_SOURCE platform/ios/platform_ios.cpp)
elseif(WIN32)
    set(COUNTDOWN_PLATFORM_SOURCE platform/windows/platform_windows.cpp)
elseif(APPLE)
    set(COUNTDOWN_PLATFORM_SOURCE platform/macos/platform_macos.cpp)
elseif(UNIX)
    set(COUNTDOWN_PLATFORM_SOURCE platform/linux/platform_linux.cpp)
else()
    message(FATAL_ERROR "Unsupported target platform")
endif()

# ---------------------------------------------------------------------------
# countdownsolver_core - the Solver QObject facade + platform glue, split out
# as a static library so it can be linked into a Qt Test binary (tests/app)
# without pulling in Quick/Gui/QuickControls2. countdownsolver below is then
# just the QML-loading executable shell over this core.
# ---------------------------------------------------------------------------
qt_add_library(countdownsolver_core STATIC
    solver.cpp
    solver.hpp
    platform/platform.hpp
    logging/logging.hpp
    logging/logging.cpp
    ${COUNTDOWN_PLATFORM_SOURCE})

target_include_directories(countdownsolver_core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

target_link_libraries(countdownsolver_core
    PUBLIC
        countdown::solver
        Qt6::Core
        Qt6::Concurrent
    PRIVATE
        countdown::warnings
        countdown::sanitizers
        countdown::coverage)

# std::getenv is flagged "unsafe" by the MSVC CRT; the usage is correct and
# portable, so silence that specific deprecation for this target only. This
# also fires under clang-cl (CXX_COMPILER_ID "Clang"), which uses the same
# MSVC CRT headers/annotations on Windows.
target_compile_definitions(countdownsolver_core PRIVATE
    "$<$<OR:$<CXX_COMPILER_ID:MSVC>,$<AND:$<PLATFORM_ID:Windows>,$<CXX_COMPILER_ID:Clang>>>:_CRT_SECURE_NO_WARNINGS>")

# The version header is generated by the library's build-time stamp target.
add_dependencies(countdownsolver_core countdown_version)

# Bundles the default word list into countdownsolver_core (not just the
# countdownsolver executable) as a Qt resource, so anything that constructs a
# Solver - the real app, but also tests/app and tests/qml's Qt Test binaries,
# which link countdownsolver_core directly and never link countdownsolver itself -
# gets a complete dictionary. Consumers must link this target with
# $<LINK_LIBRARY:WHOLE_ARCHIVE,countdownsolver_core> (see below): like
# countdownsolver_qml, nothing calls into the generated resource-registration
# object file directly, so a plain link would let the archive-member-elision
# linker default drop it and QFile(":/dictionary/words_en.txt") would silently
# open nothing.
qt_add_resources(countdownsolver_core "dictionary"
    PREFIX "/dictionary"
    BASE "resources/dictionary"
    FILES
        resources/dictionary/words_en.txt
        resources/dictionary/words_fr.txt
        resources/dictionary/words_de.txt
        resources/dictionary/words_es.txt
        resources/dictionary/words_ar.txt
        resources/dictionary/words_he.txt
        resources/dictionary/words_yi.txt)

# ---------------------------------------------------------------------------
# countdownsolver_qml - the "Countdown" QML module (Main shell, Theme/AppState
# singletons, components, pages), as its own static backing library rather
# than embedded directly in countdownsolver. This lets tests/qml link the exact
# same compiled module into a separate Qt Quick Test executable without
# duplicating the QML_FILES list against out-of-tree paths.
#
# Two things this needs that a plain STATIC + target_link_libraries doesn't
# give for free:
#   - A SHARED backing library ends up with no direct symbol references from
#     countdownsolver (all interaction is runtime QML resource lookup, not C++
#     calls), so the default GCC/Clang `--as-needed` linker behavior drops it
#     from DT_NEEDED entirely - the plugin .so never loads, so its Qt
#     resource-registration static initializers never run, and `import
#     Countdown` fails at runtime with "qmldir file not found".
#   - qt_add_qml_module's "no separate plugin" resource-embedding only
#     applies when the backing target IS the final executable; for a
#     STATIC library consumed by a *dynamically*-linked prebuilt Qt (as used
#     here), qt6_import_qml_plugins() - the usual fix for statically-linked
#     QML modules - is designed for fully static Qt builds and doesn't import
#     it either.
# STATIC + forcing the archive to link in full (see the WHOLE_ARCHIVE wraps
# below) sidesteps both: the module's resource-registration object files are
# always retained regardless of symbol usage, with no runtime plugin-file
# discovery/dlopen path to get wrong.
# ---------------------------------------------------------------------------
qt_add_library(countdownsolver_qml STATIC)

# Theme and AppState are QML singletons. This must run before
# qt_add_qml_module below: that call reads QT_QML_SINGLETON_TYPE off each
# QML_FILES entry to decide whether to emit a `singleton` qmldir line, so
# setting it afterwards silently registers both as plain (non-singleton)
# types and every Theme.*/AppState.* binding in the app resolves to
# undefined at runtime.
set_source_files_properties(qml/Theme.qml qml/AppState.qml
    PROPERTIES QT_QML_SINGLETON_TYPE TRUE)

qt_add_qml_module(countdownsolver_qml
    URI Countdown
    VERSION 1.0
    QML_FILES
        qml/Main.qml
        qml/Theme.qml
        qml/AppState.qml
        qml/components/Card.qml
        qml/components/SectionLabel.qml
        qml/components/Tile.qml
        qml/components/PadButton.qml
        qml/components/FlatButton.qml
        qml/components/NavItem.qml
        qml/components/SegControl.qml
        qml/components/LetterRackInput.qml
        qml/components/LicensesDialog.qml
        qml/pages/NumbersPage.qml
        qml/pages/LettersPage.qml
        qml/pages/ConundrumPage.qml
        qml/pages/SettingsPage.qml)

# ---------------------------------------------------------------------------
# Translations: French, German, Spanish, Arabic, Hebrew and Yiddish UI text.
# qt_add_translations() drives lupdate (scan for tr()/qsTr() calls, update the
# .ts files) and lrelease (compile them to .qm) at build time, and registers
# the .qm files as Qt resources so they're embedded in the binary. SOURCES is
# listed explicitly - the QML files already belong to countdownsolver_qml's
# sources so lupdate would find them either way, but solver.cpp's tr() calls
# live in the separate countdownsolver_core target and wouldn't be scanned
# without naming it here.
# ---------------------------------------------------------------------------
qt_add_translations(countdownsolver_qml
    TS_FILES
        translations/countdown_fr.ts
        translations/countdown_de.ts
        translations/countdown_es.ts
        translations/countdown_ar.ts
        translations/countdown_he.ts
        translations/countdown_yi.ts
    SOURCES
        qml/Main.qml
        qml/pages/NumbersPage.qml
        qml/pages/LettersPage.qml
        qml/pages/ConundrumPage.qml
        qml/pages/SettingsPage.qml
        solver.cpp)

# The window icon (taskbar/titlebar chrome at runtime, all platforms) is
# bundled as a Qt resource so main.cpp can load it as ":/icon/app_256.png"
# and hand it to QQuickWindow::setIcon() regardless of where the app is
# installed (QQuickWindow has no QML-facing `icon` property - see the
# comment in main.cpp). This resource is separate from the Windows .rc/.ico
# below, which only covers the exe file's own icon (Explorer, Alt+Tab before
# any window exists).
qt_add_resources(countdownsolver_qml "icon"
    PREFIX "/icon"
    BASE resources/icon
    FILES resources/icon/app_256.png)

# Windows exe icon (window/taskbar chrome + Explorer). qt_add_executable
# happily compiles a .rc source alongside main.cpp; the .ico it references
# is looked up relative to the .rc file's own directory by rc.exe, not the
# build dir, so no extra copy step is needed.
if(WIN32)
    set(COUNTDOWN_SOLVER_ICON_SOURCE resources/icon/app.rc)
endif()

qt_add_executable(countdownsolver
    main.cpp
    language_manager.cpp
    language_manager.hpp
    ${COUNTDOWN_SOLVER_ICON_SOURCE})

# QT_ANDROID_PACKAGE_SOURCE_DIR points Qt's CMake integration at the directory
# holding AndroidManifest.xml (and androiddeployqt's other package inputs);
# MACOSX_BUNDLE_INFO_PLIST is CMake's own bundle-Info.plist mechanism, which
# also drives iOS bundles under the Xcode generator (MACOSX_BUNDLE ON below
# already triggers bundle output there). TARGETED_DEVICE_FAMILY "2" restricts
# the iOS build to iPad only, matching the tablet-only scope of this app.
if(ANDROID)
    set_target_properties(countdownsolver PROPERTIES
        QT_ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/platform/android")
endif()

if(IOS)
    set_target_properties(countdownsolver PROPERTIES
        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/platform/ios/Info.plist.in"
        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "2")
endif()

# Noto Sans Arabic/Hebrew (SIL Open Font License - see the accompanying
# *-OFL.txt files), bundled so Arabic/Hebrew/Yiddish text renders with proper
# glyph coverage regardless of what's installed on the host; IBM Plex Sans
# (Theme.qml's default) has no Arabic or Hebrew coverage. Only countdownsolver
# needs these - no test target renders text - so unlike the dictionary
# resource above, this lives directly on the final executable with no
# WHOLE_ARCHIVE dance required.
qt_add_resources(countdownsolver "fonts"
    PREFIX "/fonts"
    BASE "resources/fonts"
    FILES
        resources/fonts/NotoSansArabic.ttf
        resources/fonts/NotoSansHebrew.ttf)

target_link_libraries(countdownsolver
    PRIVATE
        $<LINK_LIBRARY:WHOLE_ARCHIVE,countdownsolver_core>
        $<LINK_LIBRARY:WHOLE_ARCHIVE,countdownsolver_qml>
        countdown::warnings
        countdown::sanitizers
        countdown::coverage
        Qt6::Quick
        Qt6::Gui
        Qt6::QuickControls2)

# The version header is generated by the library's build-time stamp target.
add_dependencies(countdownsolver countdown_version)

countdown_deploy_sanitizer_runtime(countdownsolver)

set_target_properties(countdownsolver PROPERTIES
    WIN32_EXECUTABLE ON
    MACOSX_BUNDLE ON)

# ---------------------------------------------------------------------------
# Deploy Qt's runtime DLLs and QML plugins (Qt6Core/Gui/Qml/Quick, the
# platform plugin, QtQuick.Controls/Layouts, ...) next to the built exe so it
# runs directly from the build tree, matching how it would ship. Without
# this, countdownsolver.exe fails to start: the loader can't find the Qt DLLs
# and QML can't resolve QtQuick.Controls/Layouts imports.
# ---------------------------------------------------------------------------
if(WIN32)
    get_filename_component(COUNTDOWN_QT_BIN_DIR "${Qt6_DIR}/../../../bin" ABSOLUTE)
    find_program(COUNTDOWN_WINDEPLOYQT_EXECUTABLE
        NAMES windeployqt6 windeployqt
        HINTS "${COUNTDOWN_QT_BIN_DIR}")

    if(COUNTDOWN_WINDEPLOYQT_EXECUTABLE)
        # countdownsolver_tests and countdown_qml_tests (tests/CMakeLists.txt) run
        # their own windeployqt POST_BUILD step against this same
        # CMAKE_RUNTIME_OUTPUT_DIRECTORY and add_dependencies() on this target to
        # serialize behind it - see the comment there for why (concurrent
        # windeployqt processes race on shared destination files).
        add_custom_command(TARGET countdownsolver POST_BUILD
            COMMAND "${COUNTDOWN_WINDEPLOYQT_EXECUTABLE}"
                --qmldir "${CMAKE_CURRENT_SOURCE_DIR}/qml"
                --compiler-runtime
                "$<TARGET_FILE:countdownsolver>"
            COMMENT "Deploying Qt runtime dependencies for countdownsolver")
    else()
        message(WARNING
            "windeployqt not found next to Qt6 (looked in ${COUNTDOWN_QT_BIN_DIR}); "
            "countdownsolver.exe will not run standalone from the build tree.")
    endif()
endif()

# ---------------------------------------------------------------------------
# Install + Qt runtime deployment for packaging. qt_generate_deploy_app_script()
# is Qt's CMake-native replacement for windeployqt/macdeployqt at install
# time: it inspects the built target and emits an install(SCRIPT) that copies
# the Qt libraries/plugins the app actually uses next to it (or into the .app
# bundle on macOS). This is separate from the POST_BUILD windeployqt step
# above, which targets the build tree, not an install/package tree.
#
# Linux gets none of this: it has no supported deploy step, and Linux
# packages rely on a system Qt6 install instead (see the DEB/RPM Depends in
# cmake/Packaging.cmake). NO_UNSUPPORTED_PLATFORM_ERROR would turn the
# unsupported-platform library copy into a no-op rather than a configure
# error, but it does NOT stop qt_generate_deploy_app_script() from still
# writing a "Prefix = .." qt.conf next to the installed binary - confirmed
# empirically: that qt.conf, meant for a self-contained relocatable bundle
# (Windows/macOS), instead misdirects the system Qt6 library's QML import
# path lookup on Linux (e.g. to "/usr/qml" instead of the real multiarch
# "/usr/lib/x86_64-linux-gnu/qt6/qml"), breaking QtQuick.Controls at
# startup even when a compatible Qt6 is installed. Skip the whole call on
# Linux, where it has nothing useful left to do anyway.
# ---------------------------------------------------------------------------
include(GNUInstallDirs)

install(TARGETS countdownsolver
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    BUNDLE DESTINATION ".")

if(WIN32 OR APPLE)
    qt_generate_deploy_app_script(
        TARGET countdownsolver
        OUTPUT_SCRIPT COUNTDOWN_SOLVER_DEPLOY_SCRIPT
        NO_UNSUPPORTED_PLATFORM_ERROR)
    install(SCRIPT "${COUNTDOWN_SOLVER_DEPLOY_SCRIPT}")
endif()
